// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tile /> snapshots it renders with data attributes 1`] = `
<div
  className="mfui-beta-tile mfui-beta-tile_theme_light mfui-beta-tile_radius_default mfui-beta-tile_shadow_zero"
  data-test="test"
  onClick={[Function]}
/>
`;

exports[`<Tile /> snapshots renders component 1`] = `
<div
  className="mfui-beta-tile mfui-beta-tile_theme_light mfui-beta-tile_radius_default mfui-beta-tile_shadow_zero"
  onClick={[Function]}
>
  Some test content
</div>
`;

exports[`<Tile /> snapshots renders component with props 1`] = `
<div
  className="mfui-beta-tile mfui-beta-tile_theme_dark mfui-beta-tile_radius_rounded mfui-beta-tile_shadow_high mfui-beta-tile_pointer mfui-beta-tile_interactive test-class"
  onClick={[Function]}
>
  <a
    className="mfui-beta-tile__link"
    href="test-link"
  >
    Some test content
  </a>
</div>
`;
